--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/DBvisionTech
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=admin
 
-server.port=8083
+server.port=8086
 
 
