--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/DBvisionTech
+spring.datasource.url=jdbc:postgresql://localhost:5432/visiontech
 spring.datasource.username=postgres
 spring.datasource.password=postgre
 
